deployment-secrets-env.yaml
# generic- create a secret from a local file or literal value
# kubectl create secret generic app1 \
#     --from-literal=USERNAME=app1login \
#     --from-literal=PASSWORD='P@$$w0rD'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-secrets-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-secrets-env
  template:
    metadata:
      labels:
        app: hello-world-secrets-env
    spec:
      containers:
      - name: hello-world
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
