deployment-tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-web
spec:
  selector:
    matchLabels:
      app: hello-world-web
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world-web
    spec:
      containers:
      - name: hello-world-web
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
      tolerations:
      - key: "key"
        operator: "Equal"
        value: "MyTaint"
        effect: "NoSchedule"
