deployment_loginapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: loginwebapp
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: loginwebapp
  template:
    metadata:
      labels:
        app: loginwebapp
    spec:
      containers:
      - name: loginwebapp
        image: 25795/login-webapp:1.0
        ports:
        - containerPort: 80
      - name: postgres
        image: 25795/postgres_login-webapp:1.0
        ports:
        - containerPort: 5432
