init-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-containers
spec:
  containers:
  - name: app-container
    image: ubuntu
    command: ["/bin/bash"]
