service_loginapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginwebapp-svc
  labels:
    app: loginwebapp
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: loginwebapp
