ingress-single.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-single
spec:
  backend:
    serviceName: hello-world-svc
    servicePort: 80
